--- a/theme/index.html
+++ b/theme/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/animate.css">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -55,8 +56,8 @@
 
 
     <header class="title">
-    	<h1>Into the Wilderness</h1>
-    	<h4>Your guide to Adventures in the Wild</h4>
+    	<h1 class="animated slideInLeft">Into the Wilderness</h1>
+    	<h4 class="animated slideInRight">Your guide to Adventures in the Wild</h4>
     </header>
 
 
@@ -84,16 +85,16 @@
 				<a href="work.html"><img src="assets/img/climbing.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+				<a href="work.html"><img src="assets/img/offroad.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
+				<a href="work.html"><img src="assets/img/zipline.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
+				<a href="work.html"><img src="assets/img/biking.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
+				<a href="work.html"><img src="assets/img/camping.png" class="img-responsive"></a>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
